playground/ggz-python/generated-pyrex/pyggzcore.pyx

#!/usr/bin/python

'''
Compile with warning:
    warning: use of cast expressions as lvalues is deprecated
see:
    http://lists.copyleft.no/pipermail/pyrex/2004-April/000690.html
-- hashao
'''

include "pyggzcommon.pxi"

cdef extern from "ggzcore.h":
    cdef enum:
        GGZCORE_VERSION_MAJOR "GGZCORE_VERSION_MAJOR"
        GGZCORE_VERSION_MINOR "GGZCORE_VERSION_MINOR"
        GGZCORE_VERSION_MICRO "GGZCORE_VERSION_MICRO"

    cdef char* GGZCORE_VERSION_IFACE "GGZCORE_VERSION_IFACE"
    cdef char* GGZCORE_DBG_CONF "GGZCORE_DBG_CONF"
    cdef char* GGZCORE_DBG_GAME "GGZCORE_DBG_GAME"
    cdef char* GGZCORE_DBG_HOOK "GGZCORE_DBG_HOOK"
    cdef char* GGZCORE_DBG_MODULE "GGZCORE_DBG_MODULE"
    cdef char* GGZCORE_DBG_NET "GGZCORE_DBG_NET" 
    cdef char* GGZCORE_DBG_POLL "GGZCORE_DBG_POLL"
    cdef char* GGZCORE_DBG_ROOM "GGZCORE_DBG_ROOM"
    cdef char* GGZCORE_DBG_SERVER "GGZCORE_DBG_SERVER"
    cdef char* GGZCORE_DBG_STATE "GGZCORE_DBG_STATE"
    cdef char* GGZCORE_DBG_TABLE "GGZCORE_DBG_TABLE"
    cdef char* GGZCORE_DBG_XML "GGZCORE_DBG_XML" 

    ctypedef enum GGZOptionFlags:
        GGZ_OPT_PARSER "GGZ_OPT_PARSER"
        GGZ_OPT_MODULES "GGZ_OPT_MODULES"
        GGZ_OPT_THREADED_IO "GGZ_OPT_THREADED_IO"

    ctypedef struct GGZOptions:
        GGZOptionFlags flags

    int ggzcore_init(GGZOptions options)

    void ggzcore_destroy()

    ctypedef enum GGZHookReturn:
        GGZ_HOOK_OK
        GGZ_HOOK_REMOVE
        GGZ_HOOK_ERROR
        GGZ_HOOK_CRISIS

    ctypedef GGZHookReturn (*GGZHookFunc)(unsigned int id, 
                                         void* event_data, 
                                         void* user_data)
    ctypedef void (*GGZDestroyFunc)(void* data)

    ctypedef enum GGZLoginType:
        GGZ_LOGIN
        GGZ_LOGIN_GUEST
        GGZ_LOGIN_NEW

    ctypedef enum GGZPlayerType:
        GGZ_PLAYER_NONE
        GGZ_PLAYER_NORMAL
        GGZ_PLAYER_GUEST
        GGZ_PLAYER_ADMIN

    ctypedef struct GGZErrorEventData:
        char message[128]
        GGZClientReqError status

    ctypedef enum GGZServerEvent:
        GGZ_CONNECTED
        GGZ_CONNECT_FAIL
        GGZ_NEGOTIATED
        GGZ_NEGOTIATE_FAIL
        GGZ_LOGGED_IN
        GGZ_LOGIN_FAIL
        GGZ_MOTD_LOADED
        GGZ_ROOM_LIST
        GGZ_TYPE_LIST
        GGZ_ENTERED
        GGZ_ENTER_FAIL
        GGZ_LOGOUT
        GGZ_NET_ERROR
        GGZ_PROTOCOL_ERROR
        GGZ_CHAT_FAIL
        GGZ_STATE_CHANGE
        GGZ_CHANNEL_CONNECTED
        GGZ_CHANNEL_READY
        GGZ_CHANNEL_FAIL

    ctypedef struct GGZChatEventData:
        GGZChatType type
        char *sender
        char *message

    ctypedef struct GGZTableLeaveEventData:
        GGZLeaveType reason
        char *player

    ctypedef enum GGZRoomEvent:
        GGZ_PLAYER_LIST
        GGZ_TABLE_LIST
        GGZ_CHAT_EVENT
        GGZ_ROOM_ENTER
        GGZ_ROOM_LEAVE
        GGZ_TABLE_UPDATE
        GGZ_TABLE_LAUNCHED
        GGZ_TABLE_LAUNCH_FAIL
        GGZ_TABLE_JOINED
        GGZ_TABLE_JOIN_FAIL
        GGZ_TABLE_LEFT
        GGZ_TABLE_LEAVE_FAIL
        GGZ_PLAYER_LAG
        GGZ_PLAYER_STATS

    ctypedef enum GGZGameEvent:
        GGZ_GAME_LAUNCHED
        GGZ_GAME_LAUNCH_FAIL
        GGZ_GAME_NEGOTIATED
        GGZ_GAME_NEGOTIATE_FAIL
        GGZ_GAME_PLAYING
        GGZ_GAME_OVER
        GGZ_GAME_IO_ERROR
        GGZ_GAME_PROTO_ERROR

    ctypedef enum GGZStateID:
        GGZ_STATE_OFFLINE
        GGZ_STATE_CONNECTING
        GGZ_STATE_ONLINE
        GGZ_STATE_LOGGING_IN
        GGZ_STATE_LOGGED_IN
        GGZ_STATE_ENTERING_ROOM
        GGZ_STATE_IN_ROOM
        GGZ_STATE_BETWEEN_ROOMS
        GGZ_STATE_LAUNCHING_TABLE
        GGZ_STATE_JOINING_TABLE
        GGZ_STATE_AT_TABLE
        GGZ_STATE_LEAVING_TABLE
        GGZ_STATE_LOGGING_OUT


    ctypedef extern struct       GGZNet
    ctypedef extern struct    GGZServer
    ctypedef extern struct      GGZRoom
    ctypedef extern struct    GGZPlayer
    ctypedef extern struct     GGZTable
    ctypedef extern struct  GGZGameType
    ctypedef extern struct    GGZModule
    ctypedef extern struct      GGZGame


    GGZServer* ggzcore_server_new()

    int ggzcore_server_reset(GGZServer *server)
    int ggzcore_server_add_event_hook(GGZServer *server,
                                      GGZServerEvent event, 
                                      GGZHookFunc func)

    int ggzcore_server_add_event_hook_full(GGZServer *server,
                                           GGZServerEvent event, 
                                           GGZHookFunc func,
                                           void *data)

    int ggzcore_server_remove_event_hook(GGZServer *server,
                                         GGZServerEvent event, 
                                         GGZHookFunc func)

    int ggzcore_server_remove_event_hook_id(GGZServer *server,
                                            GGZServerEvent event, 
                                            unsigned int hook_id)

    int ggzcore_server_set_hostinfo(GGZServer *server, 
                                    char *host, 
                                    unsigned int port,
                                    unsigned int use_tls)

    int ggzcore_server_set_logininfo(GGZServer *server, 
                                     GGZLoginType type, 
                                     char *handle, 
                                     char *password)

    int          ggzcore_server_log_session(GGZServer *server, char *filename)
    char*        ggzcore_server_get_host(GGZServer *server)
    int          ggzcore_server_get_port(GGZServer *server)
    GGZLoginType ggzcore_server_get_type(GGZServer *server)
    char*        ggzcore_server_get_handle(GGZServer *server)
    char*        ggzcore_server_get_password(GGZServer *server)
    int          ggzcore_server_get_fd(GGZServer *server)
    int          ggzcore_server_get_channel(GGZServer *server)
    GGZStateID   ggzcore_server_get_state(GGZServer *server)
    int          ggzcore_server_get_tls(GGZServer *server)
    int          ggzcore_server_get_num_rooms(GGZServer *server)
    GGZRoom*     ggzcore_server_get_cur_room(GGZServer *server)
    GGZRoom*     ggzcore_server_get_nth_room(GGZServer *server, 
                                             unsigned int num)
    int          ggzcore_server_get_num_gametypes(GGZServer *server)
    GGZGameType* ggzcore_server_get_nth_gametype(GGZServer *server, 
                                            unsigned int num)
    GGZGame* ggzcore_server_get_cur_game(GGZServer *server)

    int ggzcore_server_is_online(GGZServer *server)
    int ggzcore_server_is_logged_in(GGZServer *server)
    int ggzcore_server_is_in_room(GGZServer *server)
    int ggzcore_server_is_at_table(GGZServer *server)

    int ggzcore_server_connect(GGZServer *server)
    int ggzcore_server_create_channel(GGZServer *server)
    int ggzcore_server_login(GGZServer *server)
    int ggzcore_server_motd(GGZServer *server)
    int ggzcore_server_list_rooms(GGZServer *server, int type, char verbose)
    int ggzcore_server_list_gametypes(GGZServer *server, char verbose)
    int ggzcore_server_join_room(GGZServer *server, unsigned int room)
    int ggzcore_server_logout(GGZServer *server)
    int ggzcore_server_disconnect(GGZServer *server)
    int ggzcore_server_data_is_pending(GGZServer *server)
    int ggzcore_server_read_data(GGZServer *server, int fd)
    void ggzcore_server_free(GGZServer *server)

    GGZRoom* ggzcore_room_new()
    int ggzcore_room_init(GGZRoom *room, 
                          GGZServer *server, 
                          unsigned int id, 
                          char *name, 
                          unsigned int game, 
                          char *desc)

    void ggzcore_room_free(GGZRoom *room)
    char*        ggzcore_room_get_name(GGZRoom *room)
    char*        ggzcore_room_get_desc(GGZRoom *room)
    GGZGameType* ggzcore_room_get_gametype(GGZRoom *room)
    int        ggzcore_room_get_num_players(GGZRoom *room)
    GGZPlayer* ggzcore_room_get_nth_player(GGZRoom *room, unsigned int num)
    int       ggzcore_room_get_num_tables(GGZRoom *room)
    GGZTable* ggzcore_room_get_nth_table(GGZRoom *room, unsigned int num)
    GGZTable* ggzcore_room_get_table_by_id(GGZRoom *room, unsigned int id)

    int ggzcore_room_add_event_hook(GGZRoom *room,
                                    GGZRoomEvent event, 
                                    GGZHookFunc func)

    int ggzcore_room_add_event_hook_full(GGZRoom *room,
                                         GGZRoomEvent event, 
                                         GGZHookFunc func,
                                         void *data)

    int ggzcore_room_remove_event_hook(GGZRoom *room,
                                       GGZRoomEvent event, 
                                       GGZHookFunc func)

    int ggzcore_room_remove_event_hook_id(GGZRoom *room,
                                          GGZRoomEvent event, 
                                          unsigned int hook_id)
    int ggzcore_room_list_players(GGZRoom *room)
    int ggzcore_room_list_tables(GGZRoom *room,
                                 int type,
                                 char cglobal)

    int ggzcore_room_chat(GGZRoom *room,
                          GGZChatType opcode,
                          char *player,
                          char *msg)

    int ggzcore_room_launch_table(GGZRoom *room, GGZTable *table)
    int ggzcore_room_join_table(GGZRoom *room, unsigned int table_id, 
                                int spectator)
    int ggzcore_room_leave_table(GGZRoom *room, int force)


    char*         ggzcore_player_get_name(GGZPlayer *player)
    GGZPlayerType ggzcore_player_get_type(GGZPlayer *player)
    GGZTable*     ggzcore_player_get_table(GGZPlayer *player)
    int	          ggzcore_player_get_lag(GGZPlayer *player)

    int ggzcore_player_get_record(GGZPlayer *player,
                                  int *wins, int *losses,
                                  int *ties, int *forfeits)
    int ggzcore_player_get_rating(GGZPlayer *player, int *rating)
    int ggzcore_player_get_ranking(GGZPlayer *player, int *ranking)
    int ggzcore_player_get_highscore(GGZPlayer *player, long *highscore)


    GGZTable* ggzcore_table_new()
    int ggzcore_table_init(GGZTable *table,
                           GGZGameType *gametype,
                           char *desc,
                           unsigned int num_seats)
    void ggzcore_table_free(GGZTable *table)
    int ggzcore_table_set_seat(GGZTable *table,
                               unsigned int seat,
                               GGZSeatType type,
                               char *name)

    int ggzcore_table_remove_player(GGZTable *table, char *name)
    int           ggzcore_table_get_id(GGZTable *table)
    GGZGameType*  ggzcore_table_get_type(GGZTable *table)
    char*         ggzcore_table_get_desc(GGZTable *table)
    GGZTableState ggzcore_table_get_state(GGZTable *table)
    int           ggzcore_table_get_num_seats(GGZTable *table)
    int           ggzcore_table_set_desc(GGZTable *table, char *desc)
    int           ggzcore_table_get_seat_count(GGZTable *table, GGZSeatType type)
    char* ggzcore_table_get_nth_player_name(GGZTable *table,
                                                   unsigned int num)
    int ggzcore_table_get_num_spectator_seats(GGZTable *table)
    char* ggzcore_table_get_nth_spectator_name(GGZTable *table,
                                                     unsigned int num)
    GGZSeatType ggzcore_table_get_nth_player_type(GGZTable *table, 
                                                   unsigned int num)

